# llm_classifier

./: .env.example  .gitignore  LICENSE  README.md  cursor_exploring_data_model_extensibili.md  main.py  pyproject.toml  pytest.ini
.cursor/rules/: general.mdc  git-workflow.mdc
docs/: data_model.md  data_model.qmd
llm_classifier/: classifier.py  database.py  downloader.py  parser.py  prompt.py  summarizer.py  validators.py
tests/: conftest.py  test_classifier.py  test_classifier_live.py  test_downloader.py  test_parser.py  test_prompt.py  test_summarizer.py  test_validators.py
